fixed alignment

--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@
 .cross-logo {
   object-fit: cover;
   height: 8vw;
-  width: 8vw;
+  width: 10vw;
   margin-right: 15vw;
 }
 
