--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -1,16 +1,8 @@
 .card {
-  /* Sizing */
   height: 100%;
   width: 100%;
-
   transform-style: preserve-3d;
-
-  /* Content Alignment */
   position: relative;
-
-  /* Styling */
-  border-radius: 10px;
-  border: 5px solid white;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.8);
 
   user-select: none;
@@ -19,22 +11,14 @@
 
 .card-front,
 .card-back {
-  /* Sizing */
   height: 100%;
   width: 100%;
-
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
-
-  /* Alignment */
   position: absolute;
-
-  /* Content Alignment */
   display: flex;
   justify-content: center;
   align-items: center;
-
-  /* Content Styling */
   font-family: Montserrat;
   color: black;
   text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
@@ -42,11 +26,15 @@
 
 .card-front {
   background-color: var(--primary);
+  border: 5px solid var(--secondary);
+  border-radius: 15px;
 }
 
 .card-back {
   background-color: var(--secondary);
   transform: rotateY(180deg);
+  border: 5px solid var(--primary);
+  border-radius: 15px;
 }
 
 .front-card-component {
@@ -59,7 +47,14 @@
 .card-img {
   object-fit: cover;
   height: 15vw;
-  width: 17.5vw;
-  border-radius: 23px;
+  width: 19vw;
+  border-radius: 10px;
   margin-top: 2vh;
+  border: 5px solid var(--secondary);
+  border-radius: 15px;
 }
+
+/* FRONT CARD */
+
+
+
